# kiosk-browser

./: .clang-format  .clangd  CMakeLists.txt  README.md
src/: BrowserWindow.cpp  BrowserWindow.h  Qt5BrowserWindow.cpp  Qt5BrowserWindow.h  Qt6BrowserWindow.cpp  Qt6BrowserWindow.h  main.cpp
